src/assets/styles/basics/_base.scss
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  border: none;
  outline: none;
  -webkit-user-select: none; /* Safari */
  -ms-user-select: none; /* IE 10 and IE 11 */
  user-select: none; /* Standard syntax */
}

html {
  /* font-family: montserrat; */
  /* line-height: 1.6; */
  color: $main-font-clr;
}

body {
  background-color: $main-bg-clr;
  font-family: "CircularSpotifyText";
  font-size: em(18px);
}

div {
  display: block;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "CircularSpotifyText";
  font-weight: 700;
  margin: 0;
}

ul {
  margin: 0;
  list-style-type: none;
}

section,
main,
footer {
  /* padding: 5px; */
}

img {
  max-width: 80svw;
  max-height: 45vh;
  object-fit: cover;
  aspect-ratio: 1/1;
}

p {
  margin: 0;
  /* margin: 0 0 1em; */
}

a {
  cursor: pointer;
  color: $main-font-clr;
  text-decoration: none;
}

svg {
  min-width: 15px;
  min-height: 15px;
  fill: black;
  background-color: transparent;
}

/* Adjusting h1 within specified elements */
:-webkit-any(article, aside, nav, section) h1 {
  font-size: 1.17em;
  margin: 0;
}

input {
  //text input color black
  color: black;
}

.yt {
  position: fixed;
  top: 0%;
  left: 0%;
}

